# nix-flakes

./: README.md  flake.nix  pyproject.toml
nix/: devShells.nix
pythonedaeventnixflakes/: flake_available.py  flake_created.py  flake_requested.py
